--- a/stylesheet.css
+++ b/stylesheet.css
@@ -147,6 +147,7 @@ body, html {
     background-color: #f3f3f3; /* Background color for visibility */
     border: 1px solid #ccc; /* Border for visibility */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding-bottom: 20px;
 }
 
 
@@ -158,12 +159,12 @@ h4{
     color:blue;
 }
 
+hr{
+    width: 80%;
+}
 footer{
     margin-top:20px;
     height: fit-content;
     width:100%;
     position:relative;
-    background-color: #f3f3f3; /* Background color for visibility */
-    border: 1px none #ccc; /* Border for visibility */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
