--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,6 +25,7 @@ body, html {
     justify-content: center;
     gap: 30px;
     text-decoration: none;
+    padding:5px 0 5px 0;
 }
 
 /* Styling for the header-tab */
@@ -38,6 +39,10 @@ body, html {
     padding: 20px 0;
 }
 
+a{
+    text-decoration: none;
+    color:black;
+}
 li {
     list-style: none;
   }
