--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,7 +30,7 @@ body, html {
 
 /* Styling for the header-tab */
 .header-tab {
-    color: white;
+    color: black;
     background-image: url(./assets/images/Bioelectronics.jpg);
     background-size: cover;
     background-position: center;
