--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,8 +24,12 @@ body, html {
     display:flex;
     justify-content: center;
     gap: 30px;
-    text-decoration: none;
+    text-decoration:underline;
     padding:5px 0 5px 0;
+}
+
+.proj{
+    text-decoration: underline;
 }
 
 /* Styling for the header-tab */
@@ -37,6 +41,7 @@ body, html {
     background-repeat: no-repeat;
     width: 100%;
     padding: 20px 0;
+
 }
 
 #bioelec{
